packages/hyperchad/template/tests/warnings/non-string-literal.stderr
error: literal must be double-quoted: `"a"`
 --> tests/warnings/non-string-literal.rs:8:9
  |
8 |         'a'
  |         ^^^

error: expected string, integer, or float
 --> tests/warnings/non-string-literal.rs:9:9
  |
9 |         b"a"
  |         ^^^^

error: expected string, integer, or float
  --> tests/warnings/non-string-literal.rs:10:9
   |
10 |         b'a'
   |         ^^^^
